[project]
name = "dynamic-backend-py-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "logger>=1.4",
    "pymongo>=4.16.0",
]

[tool.uv.workspace]
members = [
    "colorama",
]
